RESOLVED FIXED291204
REGRESSION(291827@main): [ MacOS] TestWebKitAPI.WebKit.AccessibilityChildrenPreventsProcessSuspensionOnFrontmostTab is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=291204
Summary REGRESSION(291827@main): [ MacOS] TestWebKitAPI.WebKit.AccessibilityChildrenP...
Per Arne Vollan
Reported 2025-04-07 09:01:28 PDT
TestWebKitAPI.WebKit.AccessibilityChildrenPreventsProcessSuspensionOnFrontmostTab is a constant failure on macOS after 291827@main.
Attachments
Per Arne Vollan
Comment 1 2025-04-07 09:01:29 PDT
Per Arne Vollan
Comment 2 2025-04-07 09:18:47 PDT
EWS
Comment 3 2025-04-08 04:51:43 PDT
Committed 293411@main (ad66ae82dc06): <https://commits.webkit.org/293411@main> Reviewed commits have been landed. Closing PR #43748 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.