REGRESSION(291827@main): [macOS] TestWebKitAPI.WebKit.AccessibilityChildrenPreventsProcessSuspensionOnFrontmostTab is a constant failure https://bugs.webkit.org/show_bug.cgi?id=291204 rdar://148554890

Reviewed by Chris Dumez.

When starting Accessibility on demand in the WebContent process, we should still send the AX remote token data to the UI process
on process initialization. This will resolve a race conditions where the AX remote tokens may not have been received in the UI
process before the first AX request.

* Source/WebKit/WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::platformInitializeAccessibility):
(WebKit::WebPage::initializeAccessibility):

Canonical link: https://commits.webkit.org/293411@main